# excercises

c/: Makefile  find_binary_gap.c  find_missing_el_in_array  find_missing_el_in_array.c  find_odd_number_in_array.c  list_01  rotate_array.c
c/list/: IList.c  IList.h  IList_01.c  IList_01.h  IList_cfg.h  Makefile  Tests_IList.c  Tests_IList_01.c  list_01.c
c/list2direction/: IList2d.c  IList2d.h  IList2d_cfg.h  Makefile  Tests_IList2d_01.c
c/shift_obj_val/: Makefile  shift_string.c  shift_ul.c
c/tree/: CMakeLists.txt  IList.c  IList.h  IList2d.c  IList2d.h  IList2d_cfg.h  IList_cfg.h  ITree_01.c  ITree_01.h  Makefile  Test_ITree_01.c  tree__with_array.c  tree__with_array_1.c
cpp/: silnia.cpp
cpp/90_template/: template_arg_formalne_01.cpp  template_const_01.cpp  template_const_02_kolejka.cpp  template_const_02_kolejka_2.cpp  template_param_domyslne.cpp  template_zagniezdzony_01.cpp
cpp/dangling_reference/: dangling_reference.cpp
cpp/reverse_words_order/: Makefile  reverse_words_order.cpp
js/: bracket_match.js  check_html_tag_sequence.js  minute_diff  minute_diff.html  minute_diff_html.html  minutes_diff.js  test_engine.js  test_engine.mjs
py/: intersection_arrays_string_numbers.py  rotate_array.py
